--- a/WebContent/css/signIn.css
+++ b/WebContent/css/signIn.css
@@ -34,6 +34,7 @@ body {
   height: auto;
   padding: 10px;
   font-size: 16px;
+  margin-bottom: -1px;
 }
 .form-signin .form-control:focus {
   z-index: 2;
@@ -44,6 +45,17 @@ body {
   border-bottom-left-radius: 0;
 }
 .form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.form-signin input[name="firstname"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin textarea {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
