--- a/WebContent/css/signIn.css
+++ b/WebContent/css/signIn.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    margin: auto;
     color: #6a6f8c;
     background: #c8c8c8;
     font: 600 16px/18px 'Open Sans', sans-serif
@@ -19,7 +19,7 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
-    padding: 90px 70px 50px 70px;
+    padding: 2rem 4rem;
     background: rgba(0, 77, 77, .9)
 }
 
@@ -90,7 +90,7 @@ body {
 }
 
 .login-space .group input[data-type="password"] {
-    /* text-security: circle; */
+    text-security: circle;
     -webkit-text-security: circle
 }
 
