--- a/WebContent/css/signIn.css
+++ b/WebContent/css/signIn.css
@@ -1,7 +1,7 @@
 body {
     margin: auto;
     color: #6a6f8c;
-    background: #c8c8c8;
+    background: rgba(154, 154, 154, .3) !important;
     font: 600 16px/18px 'Open Sans', sans-serif
 }
 
@@ -20,7 +20,7 @@ body {
     height: 100%;
     position: absolute;
     padding: 2rem 4rem;
-    background: rgba(0, 77, 77, .9)
+    background: rgba(154, 154, 154, .74)
 }
 
 .login-snip .login,
@@ -77,7 +77,7 @@ body {
 .login-space .group .input,
 .login-space .group .button {
     width: 100%;
-    color: #fff;
+    color: #000;
     display: block
 }
 
@@ -95,12 +95,13 @@ body {
 }
 
 .login-space .group .label {
-    color: #aaa;
+    color: #000;
     font-size: 12px
 }
 
 .login-space .group .button {
-    background: #1161ee
+	color: #fff;
+    background: #353535
 }
 
 .login-space .group label .icon {
@@ -197,5 +198,5 @@ a {
 }
 
 ::placeholder {
-    color: #b3b3b3
+    color: #404040
 }
