--- a/WebContent/css/signIn.css
+++ b/WebContent/css/signIn.css
@@ -1,7 +1,5 @@
 body {
-    margin: auto;
     color: #6a6f8c;
-    background: rgba(154, 154, 154, .3) !important;
     font: 600 16px/18px 'Open Sans', sans-serif
 }
 
@@ -11,8 +9,8 @@ body {
     max-width: 525px;
     min-height: 670px;
     position: relative;
-    background: url(https://images.unsplash.com/photo-1507208773393-40d9fc670acf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1268&q=80) no-repeat center;
-    box-shadow: 0 12px 15px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19)
+    /* background: url(https://images.unsplash.com/photo-1507208773393-40d9fc670acf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1268&q=80) no-repeat center;
+    box-shadow: 0 12px 15px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19) */
 }
 
 .login-snip {
@@ -20,7 +18,15 @@ body {
     height: 100%;
     position: absolute;
     padding: 2rem 4rem;
-    background: rgba(154, 154, 154, .74)
+}
+
+.container-fluid {
+    background: url(https://png.pngtree.com/thumb_back/fw800/back_our/20190625/ourmid/pngtree-simple-atmosphere-online-shopping-hand-closeup-background-poster-image_261322.jpg) no-repeat center;
+    background-size: cover;
+}
+
+.container-fluid .row {
+    background: rgba(255,255,255, .3)
 }
 
 .login-snip .login,
@@ -86,7 +92,7 @@ body {
     border: none;
     padding: 15px 20px;
     border-radius: 25px;
-    background: rgba(255, 255, 255, .1)
+    background: rgba(255, 255, 255, .3)
 }
 
 .login-space .group input[data-type="password"] {
@@ -101,7 +107,7 @@ body {
 
 .login-space .group .button {
 	color: #fff;
-    background: #353535
+    background: rgba(50, 50, 50)
 }
 
 .login-space .group label .icon {
@@ -137,7 +143,7 @@ body {
 }
 
 .login-space .group .check:checked+label {
-    color: #fff
+    color: #1161ee
 }
 
 .login-space .group .check:checked+label .icon {
